// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Swatch 1`] = `
.c0 {
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  cursor: text;
  font-size: 0.875rem;
  width: 36px;
  height: 36px;
  background-color: transparent;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-top: auto;
  position: relative;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:after {
  position: absolute;
  display: block;
  content: '';
  height: 1px;
  width: calc(100% + 12px);
  background: red;
  top: 50%;
  margin-left: -6px;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

<div
  className="c0"
  color="transparent"
  height="36px"
  width="36px"
/>
`;

exports[`Swatch with hex value passed 1`] = `
.c0 {
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  cursor: text;
  font-size: 0.875rem;
  width: 36px;
  height: 36px;
  background-color: #4c6670;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-top: auto;
}

.c0:hover {
  border-color: #C1C6CC;
}

<div
  className="c0"
  color="#4c6670"
  height="36px"
  width="36px"
/>
`;

exports[`Swatch with width and height set 1`] = `
.c0 {
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  cursor: text;
  font-size: 0.875rem;
  width: 50px;
  height: 25px;
  background-color: blue;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-top: auto;
}

.c0:hover {
  border-color: #C1C6CC;
}

<div
  className="c0"
  color="blue"
  height="25px"
  width="50px"
/>
`;
